--- a/default-firebase-data.json
+++ b/default-firebase-data.json
@@ -1,7 +1,93 @@
 {
+  "partners": [
+    {
+      "logos": [
+        {
+          "order": 0,
+          "logoUrl": "https://gdgtashkent.co/images/logos/gdg-logo.svg",
+          "name": "GDG Tashkent",
+          "url": "https://www.meetup.com/GDG-Tashkent/"
+        }
+      ],
+      "order": 0,
+      "title": "Organizer"
+    },
+    {
+      "logos": [
+        {
+          "order": 0,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        },
+        {
+          "order": 1,
+          "logoUrl": "../images/logos/gdg-x.svg",
+          "name": "GDG[x]",
+          "url": "https://github.com/gdg-x"
+        },
+        {
+          "order": 2,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        },
+        {
+          "order": 3,
+          "logoUrl": "../images/logos/gdg-x.svg",
+          "name": "GDG[x]",
+          "url": "https://github.com/gdg-x"
+        },
+        {
+          "order": 4,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        },
+        {
+          "order": 5,
+          "logoUrl": "../images/logos/gdg-x.svg",
+          "name": "GDG[x]",
+          "url": "https://github.com/gdg-x"
+        },
+        {
+          "order": 6,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        },
+        {
+          "order": 7,
+          "logoUrl": "../images/logos/gdg-x.svg",
+          "name": "GDG[x]",
+          "url": "https://github.com/gdg-x"
+        },
+        {
+          "order": 8,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        },
+        {
+          "order": 9,
+          "logoUrl": "../images/logos/gdg-x.svg",
+          "name": "GDG[x]",
+          "url": "https://github.com/gdg-x"
+        },
+        {
+          "order": 10,
+          "logoUrl": "../images/logos/google.svg",
+          "name": "Google",
+          "url": "https://www.google.com.ua/intl/en/about/"
+        }
+      ],
+      "order": 1,
+      "title": "General Partner"
+    }
+  ],
   "schedule": {
-    "2020-10-18": {
-      "dateReadable": "October 18",
+    "2016-09-09": {
+      "dateReadable": "September 9",
       "timeslots": [
         {
           "endTime": "10:00",
@@ -166,8 +252,8 @@
         }
       ]
     },
-    "2020-10-19": {
-      "dateReadable": "October 19",
+    "2016-09-10": {
+      "dateReadable": "September 10",
       "timeslots": [
         {
           "endTime": "10:10",
@@ -1497,5 +1583,204 @@
       "order": 26,
       "title": "Android Evangelist & Developer"
     }
-  }
+  },
+  "team": [
+    {
+      "members": [
+        {
+          "name": "Oleh Zasadnyy",
+          "photo": "/images/people/oleh_zasadnyy.jpg",
+          "photoUrl": "https://storage.googleapis.com/hoverboard-experimental.appspot.com/images/people/optim/oleh_zasadnyy.jpg",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/oleh.zasadnyy",
+              "name": "Facebook"
+            },
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/ozasadnyy",
+              "name": "Twitter"
+            },
+            {
+              "icon": "website",
+              "link": "http://o.zasadnyy.com/",
+              "name": "Blog"
+            }
+          ],
+          "order": 0,
+          "title": "Website and sponsors"
+        },
+        {
+          "name": "Sofiya Huts",
+          "photo": "/images/people/sofiya_huts.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/hoverboard-experimental.appspot.com/o/images%2Fpeople%2Fsofiya_huts.jpg?alt=media&token=a911eafb-f709-4af7-b1cb-58a6604b70d1",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/sophie.huts.7",
+              "name": "Facebook"
+            }
+          ],
+          "order": 1,
+          "title": "Social and media"
+        },
+        {
+          "name": "Vitaliy Zasadnyy",
+          "photo": "/images/people/vitaliy_zasadnyy.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/hoverboard-experimental.appspot.com/o/images%2Fpeople%2Fvitaliy_zasadnyy.jpg?alt=media&token=930e05c8-ae43-4628-8d4c-3e8f5193cda3",
+          "socials": [
+            {
+              "icon": "linkedin",
+              "link": "https://www.linkedin.com/in/zasadnyy",
+              "name": "Linkedin"
+            },
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/zasadnyy",
+              "name": "Twitter"
+            },
+            {
+              "icon": "website",
+              "link": "http://v.zasadnyy.com/",
+              "name": "Blog"
+            }
+          ],
+          "order": 2,
+          "title": "Speakers"
+        },
+        {
+          "name": "Marta Maxymiak",
+          "photo": "/images/people/marta_maxymiak.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/hoverboard-experimental.appspot.com/o/images%2Fpeople%2Fmarta_maxymiak.jpg?alt=media&token=6532f039-7f86-4304-8558-dbfbb3ae8d68",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/marta.maxymiak",
+              "name": "Facebook"
+            }
+          ],
+          "order": 3,
+          "title": "Party and happiness"
+        },
+        {
+          "name": "Ostap Andrusiv",
+          "photo": "/images/people/ostap_andrusiv.jpg",
+          "photoUrl": "https://storage.googleapis.com/hoverboard-experimental.appspot.com/images/people/optim/ostap_andrusiv.jpg",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/ostap.andrusiv",
+              "name": "Facebook"
+            },
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/p1f",
+              "name": "Twitter"
+            },
+            {
+              "icon": "website",
+              "link": "http://andrusiv.com/",
+              "name": "Blog"
+            }
+          ],
+          "order": 4,
+          "title": "Sponsors"
+        },
+        {
+          "name": "Vasylyna Mytsak",
+          "photo": "/images/people/vasylyna_mytsak.jpg",
+          "photoUrl": "https://storage.googleapis.com/hoverboard-experimental.appspot.com/images/people/optim/vasylyna_mytsak.jpg",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/vasylyna.mytsak",
+              "name": "Facebook"
+            }
+          ],
+          "order": 5,
+          "title": "Party and happiness"
+        },
+        {
+          "name": "Volodya Karpliuk",
+          "photo": "/images/people/volodya_karpliuk.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/hoverboard-experimental.appspot.com/o/images%2Fpeople%2Fvolodya_karpliuk.jpg?alt=media&token=aa08d9c9-c42a-435f-8672-c3a004e3aa08",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/volodya.karpluk",
+              "name": "Facebook"
+            },
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/keyv23",
+              "name": "Twitter"
+            }
+          ],
+          "order": 6,
+          "title": "Speakers"
+        },
+        {
+          "name": "Diana Pinchuk",
+          "photo": "/images/people/diana_pinchuk.jpg",
+          "photoUrl": "https://firebasestorage.googleapis.com/v0/b/hoverboard-experimental.appspot.com/o/images%2Fpeople%2Fdiana_pinchuk.jpg?alt=media&token=189d67d1-004f-4a3c-9e0c-13bc992bbaf7",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/diana.pinchuk.9",
+              "name": "Facebook"
+            }
+          ],
+          "order": 7,
+          "title": "Social and media"
+        }
+      ],
+      "title": "Core Team"
+    },
+    {
+      "members": [
+        {
+          "name": "Ihor Dvoretskyi",
+          "photo": "/images/people/ihor_dvoretskyi.jpg",
+          "photoUrl": "",
+          "socials": [
+            {
+              "icon": "facebook",
+              "link": "https://www.facebook.com/idvoretskyi",
+              "name": "Facebook"
+            },
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/idvoretskyi",
+              "name": "Twitter"
+            }
+          ],
+          "order": 0,
+          "title": "Cloud stream"
+        },
+        {
+          "name": "Dmytro Danylyk",
+          "photo": "/images/people/dmytro_danylyk.jpg",
+          "photoUrl": "",
+          "socials": [
+            {
+              "icon": "twitter",
+              "link": "https://twitter.com/dmytrodanylyk",
+              "name": "Twitter"
+            },
+            {
+              "icon": "website",
+              "link": "http://www.dmytrodanylyk.com/#/about",
+              "name": "Website"
+            }
+          ],
+          "order": 1,
+          "title": "Android Stream"
+        }
+      ],
+      "title": "Program Committee"
+    }
+  ]
+ 
+ 
 }
